--- a/css/services.css
+++ b/css/services.css
@@ -74,8 +74,9 @@ h1, h2, h3, h4, h5 {
 
     @media(max-width: 800px) {
         .container {
-        width: 800px;
+        width: 765px;
         height: auto;
+        font-size: .9em;
         }
     }
 
@@ -86,6 +87,23 @@ h1, h2, h3, h4, h5 {
             }
         }
 
+.container .mobile-logo {
+    display: none;
+}
+
+    @media(max-width: 800px) {
+        .container .mobile-logo {
+            display: flex;
+            justify-content: center;
+            margin-top: 4%;
+        }
+
+        .container .mobile-logo a img {
+            width: 80%;
+            height: 90%;
+        }
+    }
+
 .container .nav-bar {
     display: flex;
     align-items: center;
@@ -94,22 +112,32 @@ h1, h2, h3, h4, h5 {
     justify-content: space-between;
 }
 
-@media(max-width: 800px) {
-    .container .nav-bar {
-        display: none;
-    }
-}
-
 .container .nav-bar .links {
     display: flex;
     width: 68%;
     justify-content: space-between;
 }
 
+    @media(max-width: 800px) {
+        .container .nav-bar .links {
+            width: 100%;
+           justify-content: space-between;
+            margin-top: 3.5%;
+            margin-left: 4%;
+            margin-right: 8%;
+        }
+    }
+
 .container .nav-bar .links a {
     color: gray;
     text-decoration: none;
 }
+
+    @media(max-width: 800px) {
+        .container .nav-bar .links a {
+            font-size: .9em;
+        }
+    }
 
 .container .nav-bar .links a:hover {
     color: black;
@@ -121,29 +149,76 @@ h1, h2, h3, h4, h5 {
     margin-right: .5%;
 }
 
+    @media(max-width: 800px) {
+        .container .nav-bar .logo {
+            display: none;
+        }
+    }
+
 .container .banner {
     display: flex;
     flex-flow: row wrap;
 }
 
+    @media(max-width: 800px) {
+        .container .banner {
+            justify-content: center;
+        }
+    }
+
 .container .banner .services-img {
     width: 100%;
 }
+
+    @media(max-width: 800px) {
+        .container .banner .services-img {
+            display: flex;
+            justify-content: center;
+            order: 2;
+        }
+    }
 
 .container .banner .services-img img {
     width: 100%;
 }
 
+    @media(max-width: 800px) {
+        .container .banner .services-img img {
+            width: 80%;
+            align-self: center;
+            border-radius: 5%;
+            border: 1px inset silver;
+            margin-bottom: 5%;
+        }
+    }
+
 .container .banner h1 {
-    justify-content: flex-start;
     margin-top: 2.5%;
     font-size: 24px;
+    
 }
+
+    @media(max-width: 800px) {
+        .container .banner h1 {
+            margin-top: 9%;
+            font-size: 5em;
+            order: 1;
+        }
+    }
 
 .container .banner p {
     text-align: left;
     margin-bottom: 3%;
 }
+
+    @media(max-width: 800px) {
+        .container .banner p {
+            order: 3;
+            margin: 0 2% 2% 2%;
+            /* font-size: .9em; */
+            text-align: left;
+        }
+    }
 
 .container .main-content {
     border-top: 1px solid black;
@@ -153,6 +228,13 @@ h1, h2, h3, h4, h5 {
     flex-flow: column wrap;
     align-content: space-between;
 }
+
+    @media(max-width: 800px) {
+        .container .main-content {
+            flex-flow: row wrap;
+            justify-content: center;
+        }
+    }
 
 .container .main-content .info-boxes {
     border: 1px solid black;
@@ -166,6 +248,17 @@ h1, h2, h3, h4, h5 {
     padding-bottom: 1%;
     padding-right: 1%;
 }
+
+    @media(max-width: 800px) {
+        .container .main-content .info-boxes {
+            width: 45%;
+            margin: 4% 2% 0 2%;
+        }
+
+        .container .main-content .bottom-row {
+            margin-bottom: 4%;
+        }
+    }
 
 .container .main-content .info-boxes p {
     margin-bottom: 4%;
@@ -196,23 +289,36 @@ h1, h2, h3, h4, h5 {
     justify-content: space-between;
 }
 
-.container .bottom div {
+.container .bottom .facts {
     width: 50%;
 }
 
-.container .bottom div h3 {
+    @media(max-width: 800px) {
+        .container .bottom .facts {
+            margin-left: 2%;
+            line-height: 2;
+            padding-right: 2%;
+        }
+    }
+
+.container .bottom .facts h3 {
 text-align: left;
 margin-top: 7%;
 }
 
-.container .bottom div p {
+.container .bottom .facts p {
     text-align: left;
 }
 
-.container .bottom div ul {
+.container .bottom .facts ul {
     list-style-type: square;
-    
 }
+
+    @media(max-width: 800px) {
+        .container .bottom .facts ul {
+            margin-left: 2%;
+        }
+    }
 
 .container .bottom div li {
     text-align: left;
@@ -226,6 +332,14 @@ margin-top: 7%;
     height: 300px;
     margin-top: 3.5%;
 }
+
+    @media(max-width: 800px) {
+        .container .bottom .services-info-img {
+            width: 46%;
+            height: 40%;
+            margin-right: 2%;
+        }
+    }
 
 .container footer {
     margin-top: 10%;
